--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -3,32 +3,24 @@ name: Deploy to Somee
 on:
   push:
     branches:
-      - main   # Hoặc branch bạn muốn deploy
+      - main   # đổi thành branch bạn đang dùng
 
 jobs:
-  deploy:
+  ftp-deploy:
+    name: Upload to Somee Hosting
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout source code
         uses: actions/checkout@v3
 
-      # Nếu bạn dùng .NET
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Build project
-        run: dotnet publish -c Release -o publish
-
-      # Upload qua FTP lên Somee
-      - name: Deploy via FTP
+      - name: FTP Deploy to Somee
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          protocol: ftps
-          local-dir: ./publish
-          server-dir: /   # thư mục gốc hoặc thư mục bạn cần
+          server: ${{ secrets.SOMEE_FTP_SERVER }}
+          username: ${{ secrets.SOMEE_FTP_USERNAME }}
+          password: ${{ secrets.SOMEE_FTP_PASSWORD }}
+          protocol: ftp
+          server-dir: / # đổi nếu Somee yêu cầu thư mục cụ thể
+          local-dir: .
+          timeout: 600
