--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -18,7 +18,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
+          username: ${{ secrets.USER }}
           password: ${{ secrets.PW }}
           protocol: ftp
           server-dir: / # đổi nếu Somee yêu cầu thư mục cụ thể
