--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -21,5 +21,5 @@ jobs:
           password: ${{ secrets.PW }}
           protocol: ftps
           server-dir: /
-          local-dir: .
+          local-dir: ./
 
